--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
